fixing some alignment issues and margins

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -69,6 +69,7 @@ body {
         padding-bottom: 382px;
         color: #2aabd2;
     }
+
 }
 
 
@@ -146,15 +147,25 @@ body {
 }
 
 .banner-phrase h1{
-    margin-top: -35%;
-    margin-left: 37%;
+
+    position: absolute;
+    left: 0;
+    top: 40%;
+    width: 100%;
+    text-align: center;
+
     float: center;
     color: #fff;
     animation-delay: 1.5s;
 }
 
 .banner-phrase h4{
-    margin-left: 41%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+
     color: #fff;
     animation-delay: 2s;
 }
@@ -206,14 +217,15 @@ body {
     cursor:pointer;
     position: relative;
     display: block;
+    width: 100%;
 }
 
 .gallery-text{
     position: absolute;
     top: 0; right: 0;
     bottom: 0; left: 0;
-    width: 600px;
-    height: 279px;
+    width: 100%;
+    height: 100%;
     text-align: center;
     background-color: rgba(0,0,0,0.8);
     opacity: 0;
@@ -232,8 +244,7 @@ body {
     color: white;
     position: absolute;
     left: 0;
-    right: 25%;
-    top: 50%;
+    padding-top: 12%;
     width: 100%;
     text-align: center;
 }
@@ -242,7 +253,7 @@ body {
     color: white;
     position: absolute;
     left: 0;
-    top: 50%;
+    padding: 8%;
     width: 100%;
     text-align: center;
 }
